--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,6 +4,7 @@ html(lang="en")
     title= pageTitle
     link(href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet") 
     link(rel="stylesheet" href="/style.css")
+    
   body
     h1 ScoreCounter
    
@@ -22,3 +23,5 @@ html(lang="en")
       button#btn-start start
       button#btn-break break
       button#btn-reset reset
+
+    script(src="script.js")
