added service worker and manifest

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,7 +4,7 @@
 body {
   font-family: $font;
   margin: 2em;
-  background-color:#333;
+  background-color:$backgroundcolor;
   color:#aaa;
 }
 .counter{
