--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,4 +2,4 @@ $fontScore:'Orbitron', sans-serif;
 $font: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
 
 $redcolor: #FF3333;
-
+$backgroundcolor: #333;
