--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -2,3 +2,4 @@ head
     title= pageTitle
     link(href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet") 
     link(rel="stylesheet" href="/style.css")
+    link(rel='manifest', href='/manifest.json')
