changed style and scss

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,3 +3,4 @@ $font: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
 
 $redcolor: #FF3333;
 $backgroundcolor: #333;
+$textcolor: #DDD;
