--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,7 +10,7 @@ $dark-grey: #3A3A3A;
 $light-grey:#7E7E7E;
 $light: #ffffff;
 
-$accent: #FF7E4A;
+$accent: $redcolor;
 $accent-lighter: lighten( $accent, 10% );
 $accent-darker: darken( $accent, 10% );
 $accent-disabled: darken(desaturate( $accent, 50% ), 20%);
